--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Lista de productos</h1>
+<h1>Lista de productos: {{user.first_name}} {{user.last_name}} (<a href="/profile">{{user.email}}</a>) -role: {{user.role}} {{age}}</h1>
 
 <hr />
 <div align="center">
