--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+     <div>
+        {{ user.first_name }}
+    </div>
    {{{body}}} 
 </body>
 </html>
