--- a/src/views/layouts/session/register.handlebars
+++ b/src/views/layouts/session/register.handlebars
@@ -1,7 +1,15 @@
-<form action="/api/sessions/register" method="post">
+<form action="/session/register" method="post">
+
 Primer Nombre: <input type="text" name="first_name"><br>
 Segundo Nombre: <input type="text" name="last_name"><br>
 Email: <input type="text" name="email"><br>
 Edad <input type="text" name="age"><br>
-Contraseña <input type="text" name="password"><br><br><br>
-<input type="submit" value="crear">1 <a href="/">Login</a></form>
+Contraseña <input type="text" name="password">
+<br>
+<br>
+<br>
+
+<input type="submit" value="crear">
+
+
+</form>
