--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -24,4 +24,4 @@
     <button type="submit">Ingresar Producto</button>
 </form>
 
-<script src="/js/home.js"></script>
+<script src="/src/public/js/home.js"></script>
