--- a/src/views/layouts/chat.handlebars
+++ b/src/views/layouts/chat.handlebars
@@ -2,8 +2,10 @@
 <div>
    <i id="username"></i> <input id="chatBox" type="text">
 </div>
-<div id="messagesLogs"></div>
+<div id="messagesLogs">
+   
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/chat.js"></script>
+<script src="/src/public/js/chat.js"></script>
