--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-     <div>
+    <div>
         {{ user.first_name }}
     </div>
-   {{{body}}} 
+    {{{body}}}
 </body>
 </html>
