--- a/src/views/layouts/session/login.handlebars
+++ b/src/views/layouts/session/login.handlebars
@@ -1,11 +1,11 @@
 <h1>Iniciar Sesion</h1>
 
-<form action="/session/login" method="post">
+<form action="/api/session/login" method="post">
 Email: <input type="text" name="email"><br>
 password: <input type="text" name="password">
 
 
 
-<input type="submit" value="iniciar sesion"> |<a href="/session/github">Login with GitHub</a>
+<input type="submit" value="iniciar sesion"> |<a href="/api/session/github">Login with GitHub</a>
 
 </form>
