--- a/src/views/layouts/session/register.handlebars
+++ b/src/views/layouts/session/register.handlebars
@@ -1,4 +1,4 @@
-<form action="/session/register" method="post">
+<form action="/api/session/register" method="post">
 
 Primer Nombre: <input type="text" name="first_name"><br>
 Segundo Nombre: <input type="text" name="last_name"><br>
@@ -9,7 +9,7 @@ Contraseña <input type="text" name="password">
 <br>
 <br>
 
-<input type="submit" value="crear">
+<input type="submit" value="crear">| <a href="/">Login</a>
 
 
 </form>
