--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,55 +1,59 @@
-<h2>Products: {{user.first_name}} (<a href="/profile">{{user.email}}</a>) - role: {{user.role}} [<a href="/carts/{{user.cart}}">My Cart</a>] [<a href="/api/sessions/logout">Logout</a>]</h2>
+
+  <h1>Bienvenido</h1>
+
+
+<div class="card">
+  <h2>{{user.first_name}} {{user.last_name}}</h2>
+  <p><a href="/profile">{{user.email}}</a></p>
+  <p>Role: {{user.role}}</p>
+  <p> Mi Carrito: <a href="/carts/{{user.cart}}">{{user.cart}}</a> </p>
+  <a href="/session/logout">Logout</a>
+</div>
+
+
+
+<div class="title-container">
+  <h3> Productos </h3>
+</div>
+
 <hr />
-<div align="center">
-    {{#if paginateInfo.hasPrevPage}}
-        <a href="{{paginateInfo.prevLink}}">Anterior</a>
-    {{/if}}
-    {{#each paginateInfo.totalPages}}
-        <a href="{{this.link}}">{{this.page}}</a>
-    {{/each}}
-    {{#if paginateInfo.hasNextPage}}
-        <a href="{{paginateInfo.nextLink}}">Siguiente</a>
-    {{/if}}
+
+<div class="page-container">
+  <div class="page">
+  {{#if paginateInfo.hasPrevPage}}
+  <a href="{{paginateInfo.prevLink}}">Anterior</a>
+  {{/if}}
+  
+  {{#each paginateInfo.totalPages}}
+  <a href="{{this.link}}"> {{this.page}} </a>
+  {{/each}}
+  
+  {{#if paginateInfo.hasNextPage}}
+  <a href="{{paginateInfo.nextLink}}">Siguiente</a>
+  {{/if}}
+  
+  </div>
+  
 </div>
 <hr />
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <td></td>
-            <td><strong>Producto</strong></td>
-            <td><strong>Descripción</strong></td>
-            <td><strong>Precio</strong></td>
-            <td><strong>Código</strong></td>
-            <td><strong>Stock</strong></td>
-            <td><strong>Categoría</strong></td>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each products}}
-        <tr>
-            <td><button class="btn btn-success" onclick="addProductToCart('{{this._id}}')">AddToCart</button></td>
-            <td>{{this.title}}</td>
-            <td>{{this.description}}</td>
-            <td>{{this.price}}</td>
-            <td>{{this.code}}</td>
-            <td>{{this.stock}}</td>
-            <td>{{this.category}}</td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
+
+<div class="card-container">
+  {{#each products}}
+    <div class="card">
+      <button class="AddToCart" onclick="addProductToCart('{{this._id}}')">AddToCart</button>
+      <h2>{{this.title}}</h2>
+      <p>{{this.description}}</p>
+      <p>Precio: {{this.price}}</p>
+      <p>Código: {{this.code}}</p>
+      <p>Stock: {{this.stock}}</p>
+      <p>Categoría: {{this.category}}</p>
+    </div>
+  {{/each}}
+</div>
+
+
+  </tbody>
+
+
 
 <script>
-    addProductToCart = (pid, cid) => {
-        fetch(`/api/carts/{{user.cart}}/product/${pid}`, {
-            method: 'post'
-        })
-            .then(result => result.json())
-            .then(result => {
-                if (result.status === 'error') throw new Error(result.error)
-                alert(`El producto se agregó al carrito con id=${result.payload._id}!`)
-            })
-            .catch(err => alert(`Ocurrió un error ${err}`))
-        
-    }
-</script>
